fix alignment of plus and chevron

--- a/_assets/css/partials/_tasklist.scss
+++ b/_assets/css/partials/_tasklist.scss
@@ -352,7 +352,7 @@ ul.task-list {
         font-family: 'FontAwesome';
         font-size: 15px;
         left: auto;
-        right: 30px;
+        right: 12px;
         top: 16px;
         width: 18px;
         height: 18px;
